tests/paczka1/fuzzy1/87625478.err
Error in line 1: 3mLzlOdPr A874 0,5
Error in line 5: 7YU9aSL63 S987 23,5
Error in line 9: sLr S226 47,5
Error in line 10: A874 S74 87,8
Error in line 6: 7YU9aSL63 A874 85,1
Error in line 12: A874 S987 15,8
Error in line 15: 7YU9aSL63 S226 22,7
Error in line 17: A874 S226 48,6
Error in line 23: 3mLzlOdPr A874 59,7
Error in line 27: 7YU9aSL63 S987 13,6
